--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         </div>
                     </div>
 
-
+                    
                     <div class="container">
                             <div class="row">
                                 <div class="col">
@@ -133,33 +133,32 @@
                            or randomised words which don't look even slightly believable.</p>
                     </div>
                    </div>
-
-
-                   <div class="container"id="color">
-                    <div class="row">
-                      <div class="col"> <p>Millions of people of all ages and from around
-                        the world are improving their lives with us
-                        </p> </div>
-                      <div class="col"> <p> <b>Course</b></p>
-                    <p>Graphic Design</p>
-                    <p> Web Design</p>
-                    <p>Business</p>
-                    <p>Marketing</p>
-                    <p>Engineering</p>
-                    </div>
-                      <div class="col"><p> <b>Terms</b></p>
-                        <p>Graphic Design</p>
-                        <p> Web Design</p>
-                        <p>Business</p>
-                        <p>Marketing</p>
-                        <p>Engineering</p></div>
-                      <div class="col"><p> <b>Useful Link</b></p>
-                        <p>Graphic Design</p>
-                        <p> Web Design</p>
-                        <p>Business</p>
-                        <p>Marketing</p>
-                        <p>Engineering</p></div>
-                    </div>
+ 
+                    <div class="container"id="color">
+                      <div class="row">
+                        <div class="col-md-6"> <p>Millions of people of all ages and from around
+                          the world are improving their lives with us.
+                          </p> </div>
+                        <div class="col-md-2"> <p> <b>Course</b></p>
+                      <p>Graphic Design</p>
+                      <p> Web Design</p>
+                      <p>Business</p>
+                      <p>Marketing</p>
+                      <p>Engineering</p>
+                      </div>
+                        <div class="col-md-2"><p> <b>Terms</b></p>
+                          <p>Graphic Design</p>
+                          <p> Web Design</p>
+                          <p>Business</p>
+                          <p>Marketing</p>
+                          <p>Engineering</p></div>
+                        <div class="col-md-2"><p> <b>Useful Link</b></p>
+                          <p>Graphic Design</p>
+                          <p> Web Design</p>
+                          <p>Business</p>
+                          <p>Marketing</p>
+                          <p>Engineering</p></div>
+                      </div>
 
                     <footer> <p class="text-center"> ©Md.Taufiqur Rahman. All rights reserved. </p> </footer>
 
