--- a/index.html
+++ b/index.html
@@ -133,16 +133,6 @@
                                 <p class="card-text"><img src="images/ICON/people.png" alt="">60 seats</p>
                               </div>
                             </div>
-                            <div class="card">
-                              <img src="images/Photos/Morder pychons.png" class="card-img-top" alt="...">
-                              <div class="card-body">
-                                <h4 class="card-title">Modern Psychology </h4>
-                                <p class="card-text">Designation</p>
-                                <button class="btn" type="submit">Buy Course </button>
-                                <p class="card-text"> <img src="images/ICON/calendar.png" alt=""> Start 20 April, 2021</p>
-                                <p class="card-text"><img src="images/ICON/people.png" alt="">60 seats</p>
-                              </div>
-                            </div>
                           </div>
                     
                     </div>
@@ -163,20 +153,20 @@
                         <div class="col-md-6"> <p>Millions of people of all ages and from around
                           the world are improving their lives with us.
                           </p> </div>
-                        <div class="col-md-2"> <p> <b>Course</b></p>
+                        <div class="col-md-2"> <p> <b><span class="high-light">Course</span></b></p>
                       <p>Graphic Design</p>
                       <p> Web Design</p>
                       <p>Business</p>
                       <p>Marketing</p>
                       <p>Engineering</p>
                       </div>
-                        <div class="col-md-2"><p> <b>Terms</b></p>
+                        <div class="col-md-2"><p> <b><span class="high-light">Terms</span></b></p>
                           <p>Graphic Design</p>
                           <p> Web Design</p>
                           <p>Business</p>
                           <p>Marketing</p>
                           <p>Engineering</p></div>
-                        <div class="col-md-2"><p> <b>Useful Link</b></p>
+                        <div class="col-md-2"><p> <b> <span class="high-light">Useful Link</span> </b></p>
                           <p>Graphic Design</p>
                           <p> Web Design</p>
                           <p>Business</p>
