--- a/index.html
+++ b/index.html
@@ -65,37 +65,37 @@
         <section class="topic">
           <div class="container">
             <div class="row row-cols-1 row-cols-md-4">
-                <div class="col mb-4">
-                  <div class="card-first">
+                <div class="col mb-4 ">
+                  <div class="cards-first">
                     <img src="images/ICON/book.png" class="card-img-top" alt="...">
-                    <div class="card-body">
+                    <div class="cards-body">
                       <h4 class="title">1500+ Topic</h4>
                       <h6 class="text">Learn Anythings</h6>
                     </div>
                   </div>
                 </div>
-                <div class="col mb-4">
-                  <div class="card-first">
+                <div class="col mb-4 ">
+                  <div class="cards-first">
                     <img src="images/ICON/Student.png" class="card-img-top" alt="...">
-                    <div class="card-body">
+                    <div class="cards-body">
                       <h4 class="title">1800+ Students</h4>
                       <h6 class="text">Learn Anythings</h6>
                     </div>
                   </div>
                 </div>
-                <div class="col mb-4">
-                  <div class="card-first">
+                <div class="col mb-4 ">
+                  <div class="cards-first">
                     <img src="images/ICON/Test.png" class="card-img-top" alt="...">
-                    <div class="card-body">
+                    <div class="cards-body">
                       <h4 class="title">9k+ Test Token</h4>
                       <h6 class="text">Learn Anythings</h6>
                     </div>
                   </div>
                 </div>
                 <div class="col mb-4">
-                  <div class="card-first">
+                  <div class="cards-first">
                     <img src="images/ICON/Students.png" class="card-img-top" alt="...">
-                    <div class="card-body">
+                    <div class="cards-body">
                       <h4 class="title">2000+ Student</h4>
                       <h6 class="text">Learn Anythings</h6>
                     </div>
